<resources>
    <string name="app_name">YouTube Downloader</string>

    <string name="category_download">Category Download</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="storage_folder">Storage Folder</string>
    <string name="settings">Settings</string>
    <string name="social_downloader">Social Downloader</string>
    <string name="hello">Hello</string>
    <string name="paste_link_here">Paste link here ...</string>
    <string name="history_by_applications">History By Applications</string>
    <string name="_31_files">31 files</string>
    <string name="khasan_anorov">Khasan Anorov</string>
    <string name="downloads_history">Downloads History</string>

    <string name="notification_channel_name">YouTube Downloader</string>
    <string name="new_downloaded_video">New Downloaded Video</string>
    <string name="new_videos_text">You have new videos in YouTube Downloader.</string>

    <string name="command_is_already_running">A command is already running</string>
    <string name="command_queued">Command queued. Check notification for progress</string>

    <string name="command_noti_title">yt-dlp command</string>
    <string name="downloads">Downloads</string>
    <string name="home">Home</string>
    <string name="about_app">About App</string>
    <string name="app_theme">App Theme</string>
    <string name="language">English</string>
    <string name="success">Success</string>
    <string name="loading">Loading ...</string>
    <string name="files"> files</string>

    <string name="light_theme">Light Theme</string>
    <string name="night_theme">Night Theme</string>
    <string name="system_theme">Device\'s Theme</string>
    <string name="please_wait_12">Please wait 0%</string>

    <string name="cancel_download">Cancel download</string>
    <string name="update">Update</string>
    <string name="already_updated">Already up to date</string>
    <string name="updated_successful">Updated successful</string>
    <string name="already_up_to_date">Already up to date</string>
    <string name="format">Formats</string>
    <string name="choose_video_formats">Choose Video Format</string>
    <string name="please_hold_on_fetching_information">Please hold on, fetching information ...</string>
    <string name="please_wait">Please wait ...</string>
    <string name="video_format">Video format</string>
    <string name="enter_link_to_download">Enter link to download!</string>

    <string name="something_went_wrong">Something went wrong !</string>
    <string name="permission_denied">Permission denied !</string>
    <string name="update_in_progress">Update is already in progress !</string>
    <string name="wait_updating">Wait, updating ...</string>


    <string-array name="formats">
        <item>144</item>
        <item>360</item>
        <item>720</item>
        <item>1080</item>
        <item>2040</item>
    </string-array>

</resources>