<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

<!--    <item android:id="@+id/categoryDownloadFragment"-->
<!--        android:title="@null"-->
<!--        app:actionLayout="@layout/drawer_item"/>-->

    <item android:id="@+id/downloadsFragment"
        android:title="@string/downloads"
        android:icon="@drawable/download"/>

    </group>

        <item android:title="@string/settings">

            <menu>
                <group android:checkableBehavior="none">
                <item
                    android:id="@+id/darkMode"
                    app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                    android:title="@string/dark_mode" />
                </group>
            </menu>

        </item>

</menu>