<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewDownloads"
        style="@style/Widget.App.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4x"
        android:layout_marginTop="@dimen/margin_3_5x"
        app:cardBackgroundColor="?colorOnPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.App.Card"
                android:layout_width="@dimen/margin_14x"
                android:layout_height="@dimen/margin_14x"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Oval">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/margin_6x"
                    android:layout_height="@dimen/margin_6x"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_1_5x"
                    app:srcCompat="@drawable/ic_cloud_download_24dp"
                    />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewSaved"
                style="@style/TextAppearance.App.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_3x"
                android:layout_weight="1"
                android:text="@string/downloads"
                android:textColor="?colorSecondary" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/icon_size_normal"
                android:layout_height="@dimen/icon_size_normal"
                android:layout_gravity="center"
                app:tint="?colorSecondary"
                app:srcCompat="@drawable/ic_arrow_right" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewAbout"
        style="@style/Widget.App.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4x"
        android:layout_marginTop="@dimen/margin_3_5x"
        app:cardBackgroundColor="?colorOnPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.App.Card"
                android:layout_width="@dimen/margin_14x"
                android:layout_height="@dimen/margin_14x"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Oval">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/margin_6x"
                    android:layout_height="@dimen/margin_6x"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_1_5x"
                    app:srcCompat="@drawable/ic_message"
                    />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewAbout"
                style="@style/TextAppearance.App.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_3x"
                android:layout_weight="1"
                android:text="@string/about_app"
                android:textColor="?colorSecondary" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/icon_size_normal"
                android:layout_height="@dimen/icon_size_normal"
                android:layout_gravity="center"
                app:tint="?colorSecondary"
                app:srcCompat="@drawable/ic_arrow_right" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewTheme"
        style="@style/Widget.App.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4x"
        android:layout_marginTop="@dimen/margin_3_5x"
        app:cardBackgroundColor="?colorOnPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.App.Card"
                android:layout_width="@dimen/margin_14x"
                android:layout_height="@dimen/margin_14x"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Oval">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/margin_6x"
                    android:layout_height="@dimen/margin_6x"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_1_5x"
                    app:srcCompat="@drawable/ic_brush"
                    />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewTheme"
                style="@style/TextAppearance.App.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_3x"
                android:layout_weight="1"
                android:text="@string/app_theme"
                android:textColor="?colorSecondary" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/icon_size_normal"
                android:layout_height="@dimen/icon_size_normal"
                android:layout_gravity="center"
                app:tint="?colorSecondary"
                app:srcCompat="@drawable/ic_arrow_right" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_7_5x"/>
</LinearLayout>